feat: add record listing api
